--- a/uk/snippets.lang
+++ b/uk/snippets.lang
@@ -2,130 +2,130 @@
 
 
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-Візміть Firefox з собою! Насолоджуйтесь новим Firefox для Android. <a href="%s">Забирайте його тут.</a>
+Візьміть Firefox з собою! Firefox під Android вже вийшов і готовий вас порадувати. <a href="%s">Забирайте його тут.</a>
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
-У вас найновіша версія Firefox. <a href="%s">Перегляньте, що ви можете з нею робити</a>.
+Тепер, коли ви встановили останню версію Firefox, <a href="%s">дізнайтесь про кльові речі</a>, які вона вміє робити.
 
 
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
-У вас не найновіша версія Firefox. <a href="%s">Оновіться сьогодні</a> та отримайте найкращі враження!
+У вас не найновіша версія Firefox. <a href="%s">Оновіться сьогодні</a> та беріть від мережі найкраще!
 
 
 ;Get the latest Firefox features first in <a href="%s">Aurora</a>.
-Спробуйте найновіші можливості <a href="%s">Аврори</a> першими.
+Дізнайтесь про останні новинки в Firefox першим, завантаживши <a href="%s">Аврору</a>.
 
 
 ;Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
-Загляніть у майбутнє Firefox. <a href="%s">Завантажте Firefox Аврора</a> та протестуйте нові можливості.
+Загляніть у майбутнє Firefox. <a href="%s">Завантажте Firefox Аврора</a> та протестуйте останні новинки.
 
 
 ;Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
-Перед виходом Firefox виходить Бета, а перед нею - Аврора. <a href="%s">Спробйте Firefox Аврора</a> з її найсучаснішими можливостями.
+Перед виходом Firefox виходить Бета, а перед нею — Аврора. <a href="%s">Спробуйте Firefox Аврора</a> з її останніми новинками.
 
 
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
-<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
+<a href="%s">Поширюйте звістку про Firefox</a> в світі — для цього є нині всі можливості!
 
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
+Firefox є з гордістю некомерційний і безкомпромісно інноваційний заради вас. <a href="%s">Дізнайтесь більше</a> про нашу місію.
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
+Швидкий, гнучкий та безпечний, Firefox є єдиним браузером що ставить вас на перше місце. <a href="%s">Дізнайтесь більше</a> про те, що відрізняє нас від інших.
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
+<a href="%s">Завантажте Firefox для вашого Android-планшета</a> і вся безмежність інтернету буде в вас в руках.
 
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
+Тримайте ваші плагіни свіжими і лишайтесь у безпеці завдяки сайту <a href="%s">Перевірки Плагінів</a>.
 
 
 ;Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
-Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
+Додайте своєму Firefox’у стиля. Вдягніть його в останні <a href="%s">Персони</a>.
 
 
 ;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
-Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
+Забагато вкладок? Позбудьтеся безладу з допомогою <a href="%s">Панорами</a>.
 
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
+Кожен користувач Firefox’а особливий. <a href="%s">Додайте кнопок до вашого браузера</a> чи вилучте непотрібні. Клацніть правою клавішею по значку Дім та виберіть Налаштувати.
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
+Вдягніть ваш Firefox в Персони. Наведіть щоб спробувати, клацніть щоб застосувати. Чи завітайте в <a href="%s">галерею</a> з тисячами інших!
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
+Зацініть останні новинки, не чекаючи на Бету-версію. <a href="%s">Завантажте Firefox Аврора.</a>
 
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
-<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
+<a href="%s">Завантажте Firefox Аврора</a> щоб віддтестувати новинки та визначити, що піде в Бету.
 
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
+Включайтесь в процес та допоможіть сформувати майбутнє Firefox. <a href="%s">Завантажте Firefox Аврора.</a>
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
+Firefox під Android тепер оптимізовано для роботи на планшетах. <a href="%s">Пориньте у безмежжя інтернета</a>.
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
+Завантажте Firefox під Android-планшети та тримайте в руках всю безмежність інтернету. <a href="%s">Завантажити зараз</a>.
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Завантажте Firefox Бета</a>, шліть відгуки та допоможіть зробити наступний Firefox ще кращим для всіх 450 мільйонів користувачів.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Тестуючи новинки, покращуючи та засилаючи відгуки, ви допомогаєте зробити наступну версію кращою ніж будь-коли. <a href="%">Завантажте Firefox Бета сьогодні!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Любите Firefox? Хочете зробити наступну версію ще кращою? <a href="%">Завантажте Firefox Бета</a> та шліть відгуки сьогодні!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+Ви користуєтесь останньою бетою Firefox? <a href="%">Завантажте її сьогодні</a> і допоможіть нам відтестувати останні новинки.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Не користуєтесь останньою бетою Firefox? <a href="%">Завантажте її сьогодні</a> щоб бути в курсі того, що ми готуємо в наступній версії.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Хочете поділитись враженнями? <a href="%">Дізнайтесь як</a> і допоможіть зробити наступну версію Firefox ще кращою.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Користувачам Firefox Бета: Не забувайте <a href="%">слати відгуки</a> щоб допомогти нам внести останні правки в наступну версію.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Допоможіть зробити наступну версію Firefox ще кращою. <a href="%">Поширюйте звістку</a> про Firefox Бета серед ваших друзів.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Запросіть друзів долучитись до попереднього перегляду новинок Firefox. <a href="%">Поширюйте звістку</a> про Firefox Аврора.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Використовуєте Firefox на кількох комп’ютерах? Тепер ви можете синхронізувати ваші додатки між ними. <a href="%">Дізнайтесь як активувати синхронізацію.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Швидкість, швидкість, швидкість. <a %s>Firefox під Android щойно серйозно оновився</a>. Допоможіть поширити звістку.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Нові можливості Firefox роблять перехід від однієї задачі до іншої ще швидшим! <a href="%">Гляньте відео щоб дізнатись більше.</a>
 
 
