--- a/uk/firefoxtesting.lang
+++ b/uk/firefoxtesting.lang
@@ -30,7 +30,7 @@ Firefox Бета для мобільних
 
 
 ;1. Test Features
-1. Потестуйте новинки
+1. Тестуйте новинки
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
