l10n: cy, update for fx13, translation by Rhoslyn Prys
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105882 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/cy/snippets.lang
+++ b/cy/snippets.lang
@@ -126,6 +126,6 @@ Cyflym, cyflym, cyflym. <a %s>Mae Firefox ar gyfer Android newydd gael diweddari
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Mae gan Firefox nodweddion newydd sy'n gwneud mynd i'ch tasg nesaf yn gynt nag erioed! <a href="%">Gwyliwch y fideo i ddysgu rhagor.</a>
 
 
