--- a/cy/whatsnew.lang
+++ b/cy/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hwre! Mae eich Firefox yn gyfredol.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Mae eich Firefox yn hen.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Am resymau diogelwch, rydym yn argymell diweddaru i'r <a href="{url}">fersiwn diweddaraf a'r gorau</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Rydych yn rhedeg fersiwn anhysbys o Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Am resymau diogelwch, rydym yn argymell llwytho i lawr y <a href="{url}">fersiwn diweddaraf a'r gorau</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Mynd i'ch tasg nesaf<br/>yn gynt nag erioed
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Gweld sut mae'r nodweddion newydd yn Firefox yn eich helpu i bori'n gynt a mwy effeithiol.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Dysgu rhagor am <a href="{url}">nodweddion y Tab Newydd »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Dysgu rhagor am ein <a href="{url}">tudalen cartref newydd »</a>
 
 
 ;Keep in touch
-Keep in touch
+Cadw mewn cysylltiad
 
 
 ;Keep it moving
-Keep it moving
+Cadw'r peth i symud
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Estyn Firefox » <b>ar gyfer Android</b>
 
 
 ;Keep it going
-Keep it going
+Cadw'r peth i fynd
 
 
 ;Join Mozilla
-Join Mozilla
+Ymuno â Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Mae'r Robot Android wedi ei atgynhyrchu o waith a grëwyd ac a <a href="%s">rhannwyd gan Google</a> ac sy'n cael ei ddefnyddio yn unol â'r amodau sy'n cael eu disgrifio yn y <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
 
