l10n: cy, update for fx13, video, translation by Rhoslyn Prys
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105883 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/cy/videos/video_fx13.lang
+++ b/cy/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Beth sy'n newydd yn Firefox] Mae nawr yn haws a chynt i fynd i'r lle a fynnoch gyda'r Firefox diweddaraf.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Mae'r dudalen Cartref newydd yn rhoi mynediad hwylus i'r dewisiadau mwyaf cyffredin.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Fel llwytho i lawr, nodau tudalen, hanes, ychwanegion cydweddu a gosodiadau.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Tudalen Tab Newydd] Rydym hefyd wedi ychwanegu gwelliannau i'ch tudalen Tab Newydd.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Gyda'r tudalen Tab Newydd, mae modd symud yn hawdd i'r gwefannau rydych wedi ymweld â nhw yn aml ac yn ddiweddar, gyda chlic.	
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Er mwyn cychwyn defnyddio'r dudalen Tab Newydd, crëwch dab newydd drwy glicio ar y '+' ar frig y porwr.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Bydd  dudalen Tab Newydd yn arddangos lluniau bach o'r gwefannau rydych wedi ymweld â nhw yn ddiweddar ac yn aml o'r hanes yn eich Bar Rhyfeddol.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Mae modd cyfaddasu eich tudalen Tab Newydd drwy lusgo'r lluniau bach er mwyn newid eu trefn.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Cliciwch ar y pin pwyso i gloi'r wefan yn ei lle neu'r botwm 'X' button i dynnu gwefan.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Mae hefyd modd i glicio ar yr eicon 'grid' ar y brig ar y dde'r dudalen i fynd yn ôl i dudalen Tab newydd..
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Estynnwch y Firefox diweddaraf a chychwyn defnyddio'r nodweddion newydd yma heddiw!
