--- a/pt-BR/videos/video_fx13.lang
+++ b/pt-BR/videos/video_fx13.lang
@@ -1,14 +1,14 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[O que há de novo no Firefox] Agora é mais fácil e rápido chegar onde você quer com o Firefox mais recente.
+[O que há de novo no Firefox] Agora é mais fácil e rápido chegar onde você quer com o mais novo Firefox.
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-Com a Página Inicial renovada você pode acessar e navegar facilmente pelas suas opções de menu mais usadas.
+Com a Página Inicial renovada, você pode acessar e navegar facilmente pelas suas opções de menu mais usadas.
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
 Como downloads, favoritos, histórico, complementos, sync e configurações.
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[Página Nova aba] Nós também adicionamos melhorias à sua página Nova aba.
+[Página Nova Aba] Nós também adicionamos melhorias à sua página Nova Aba.
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
 Com a nova página Nova Aba você pode navegar facilmente pelos sites visitados recentemente e com mais frequência em um clique.
@@ -17,7 +17,7 @@ Com a nova página Nova Aba você pode navegar facilmente pelos sites visitados 
 Para começar a usar a nova página Nova Aba, crie uma nova aba clicando no '+' no topo do navegador.
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-A página nova aba agora exibe miniaturas dos sites visitados recentemente e com mais frequência do seu histórico do Campo de Endereços Inteligente.
+A página Nova Aba agora exibe miniaturas dos sites visitados recentemente e com mais frequência do seu histórico do Campo de Endereços Inteligente.
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
 Você pode personalizar a sua página Nova Aba arrastando as miniaturas para mudar a ordem.
