--- a/pt-BR/whatsnew.lang
+++ b/pt-BR/whatsnew.lang
@@ -16,10 +16,10 @@ Você está usando uma versão desconhecida do Firefox.
 Por razões de segurança, nós recomendamos que você baixe a <a href="{url}">melhor e mais recente versão</a>.
 
 ;Get to your next task<br/>faster than ever
-Chegue até sua próxima tarefa<br/>mais rápido que nunca
+Chegue até sua próxima tarefa mais rápido que nunca
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-Voja como od novos recursos do Firefox ajudam você a navegar com mais velocidade e eficiência.
+Veja como os novos recursos do Firefox ajudam a navegar com mais velocidade e eficiência.
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
 Saiba mais sobre a <a href="{url}">página Nova Aba »</a>
@@ -31,7 +31,7 @@ Saiba mais sobre nossa <a href="{url}">página inicial renovada »</a>
 Mantenha contato
 
 ;Keep it moving
-Mantenha em movimento
+Mantenha-se em movimento
 
 ;Get Firefox » <b>for Android</b>
 Baixe o Fireofx » <b>para Android</b>
