--- a/sk/videos/video_fx13.lang
+++ b/sk/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Čo je nové vo Firefoxe] Vo Firefoxe je teraz ešte jednoduchšie a rýchlejšie dostať sa tam, kam chcete.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+S novou domovskou stránkou môžete jednoducho pristupovať k svojim bežným položkám...
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+...ako sú prevzaté súbory, záložky, história prehliadania, doplnky, synchronizácia a nastavenia.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Stránka Nová karta] Takisto sme vylepšili stránku Nová karta.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Pomocou stránky Nová karta môžete jednoducho prejsť na vaše naposledy navštívené a často navštevované stránky len na jedno kliknutie.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Stránku Nová karta zobrazíte kliknutím na tlačidlo '+' v hornej časti prehliadača.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Stránka Nová karta bude odteraz zobrazovať ukážky naposledy navštívených a často navštevovaných stránok z histórie prehliadača.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Ukážky si môžete jednoduchým pretiahnutím myšou presúvať.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Kliknite na ikonu pripínača, ak chcete stránku uchovať na danom mieste. Kliknutím na tlačidlo 'X' stránku odstránite.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Kliknutím na tlačidlo 'mriežky' v pravom hornom rohu sa vrátite na prázdnu stránku novej karty.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Nainštalujte si najnovší Firefox a začnite využívať tieto funkcie ešte dnes.
