--- a/fa/videos/video_fx13.lang
+++ b/fa/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[چه چیز جدیدی در فایرفاکس است] حالا ساده‌تر و سریع‌تر از همیشه می‌توانید با فایرفاکس به جایی که می‌خواهید بروید.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+با طراحی دوباره‌ی صفحه‌ی خانگی، هم‌اکنون شما می‌توانید به گزینه‌هایی از منو که بیشتر از آنها استفاده می‌کنید دسترسی داشته باشید.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+مثلا بارگیری‌ها، نشانک‌ها، افزونه‌ها، همگام‌سازی و تنظیمات.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[صفحه زبانه جدید] ما همچنین بهینه‌سازی‌هایی را بر روی صفحه‌ی جدید زبانه‌های افزوده‌ایم.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+با صفحه‌ی زبانه‌ی جدید، شما می‌توانید به‌سادگی و با یک کلیک بین صفحه‌هایی که بیشترین بازدید را داشته‌اید حرکت کنید.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+برای شروع جهت استفاده از صفحه‌ی زبانه‌ی جدید، بر روی «+» در بالای مرورگر خود کلیک کنید و یک زبانه جدید بسازید.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+صفحه زبانه‌ی جدید از این پس عکس‌هایی بندانگشتی از صفحاتی که بیشترین بازدید از آنها را در تاریخچه‌ی نوار جادویی خود داشته‌اید نشان می‌دهد.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+شما می‌توانید با کشیدن عکس‌های بندانگشتی به اطراف صفحه زبانه‌ی جدید خود را سفارشی کنید.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+با کلیک بر روی سنجاق صفحه را در جای‌اش ثابت کنید، یا با کلیک بر روی X آن را حذف کنید.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+شما همچنین می‌توانید با کلیک بر روی آیکن «شبکه» در بالا سمت راست صفحه به یک زبانه خالی جدید بروید.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+آخرین فایرفاکس را هم‌اکنون بگیرید و از امکانات جدیداش استفاده کنید!
