--- a/fa/whatsnew.lang
+++ b/fa/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+هورا! فایرفاکس شما بروز است.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+فایرفاکس شما قدیمی است.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+به دلایل امنیتی ما پیشنهاد میکنیم که به <a href="{url}">آخرین و بهترین نسخه</a> بروزرسانی کنید.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+شما یک نسخه‌ی ناشناس از فایرفاکس را اجرا می‌کنید.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+به دلایل امنیتی ما پیشنهاد میکنیم که <a href="{url}">آخرین و بهترین نسخه</a> را دریافت کنید.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+کار بعدی خود را انجام دهید<br/>سریع‌تر از همیشه
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+ببینید که چگونه امکانات جدید فایرفاکس به شما کمک می‌کند که سریع‌تر و کارآمدتر به مرور بپردازید.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+بیشتر بخوانید: <a href="{url}">امکانات جدید زبانه جدید »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+بیشتر بخوانید: <a href="{url}"> طراحی مجدد صفحه‌ی خانگی »</a>
 
 
 ;Keep in touch
-Keep in touch
+در جریان باشید
 
 
 ;Keep it moving
-Keep it moving
+در حرکت باشید
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+دریافت فایرفاکس » <b>برای اندروید</b>
 
 
 ;Keep it going
-Keep it going
+ادامه بدهید
 
 
 ;Join Mozilla
-Join Mozilla
+به موزیلا بپیوندید
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+روبات اندروید بر اساس کارهایی که گوگل انجام داده و به اشتراک‌گذاشته است بازسازی شده و بر اساس شرایطی که در گواهینامه <a href="%s">Creative Commons 3.0 Attribution</a> ذکر شده مورد استفاده قرار گرفته‌است.
 
 
