--- a/zh-CN/whatsnew.lang
+++ b/zh-CN/whatsnew.lang
@@ -42,7 +42,7 @@
 
 
 ;Keep it moving
-不断变化
+移动环境中
 
 
 ;Get Firefox » <b>for Android</b>
@@ -50,7 +50,7 @@
 
 
 ;Keep it going
-坚持到底
+保持联系
 
 
 ;Join Mozilla
