--- a/fr/videos/video_fx13.lang
+++ b/fr/videos/video_fx13.lang
@@ -1,42 +1,41 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Quoi de neuf dans Firefox] Il est maintenant plus facile et plus rapide d'aller où bon vous semble avec le dernier Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-
+Grâce à la nouvelle conception de la page d'accueil, vous accèderez plus facilement à vos options préférées…
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+… comme les téléchargements, les marque-pages, l'historique, les modules complémentaires, sync et les préférences.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Page en nouvel onglet] Nous avons aussi amélioré la page du nouvel onglet.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Avec la page du nouvel onglet, vous pouvez maintenant naviguer facilement sur les sites les plus récemment et fréquemment visités en un clic.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Pour commencer à utiliser la page en nouvel onglet, créez un onglet en cliquant sur le bouton '+' en haut de votre navigateur.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+La page du nouvel onglet affichera désormais des miniatures de vos sites les plus récemment et fréquemment visités à partir de l'historique de la barre d'adresse intelligente.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Vous pouvez personnaliser la page de nouvel onglet en faisant glisser les miniatures pour en changer la disposition.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Cliquez sur la punaise pour verrouiller un site à un emplacement, ou sur le bouton 'X' pour enlever un site.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Vous pouvez aussi cliquer sur l'icône 'grille' en haut à droite de la page pour revenir à la page blanche du nouvel onglet.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Obtenez la dernière version de Firefox maintenant et commencez à utiliser ces nouvelles fonctionnalités dès aujourd'hui&nbsp;!
