bug 760472, [as] Translate Whats New page for Firefox 13 + vido, done
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105994 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/as/whatsnew.lang
+++ b/as/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+বঢ়িয়া! আপোনাৰ Firefox বৰ্তমান তাৰিখলৈ উন্নত।
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+আপোনাৰ Firefox পুৰনি হল।
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+সুৰক্ষা কাৰণসমূহৰ বাবে, আমি <a href="{url}">শেহতীয়া আৰু সৰ্বোত্তম সংস্কৰণ</a> লে উন্নত কৰাৰ উপদেশ দিও।
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+আপুনি Firefox ৰ এটা অজ্ঞাত সংস্কৰণ চলাই আছে।
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+সুৰক্ষা কাৰণসমূহৰ বাবে, আমি <a href="{url}">শেহতীয়া আৰু সৰ্বোত্তম সংস্কৰণ</a> ডাউনল'ড কৰাৰ উপদেশ দিও।
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+আপোনাৰ পৰৱৰ্তী কাৰ্য্য<br/>লে সৰ্বকালীন দ্ৰুত'তাৰ সৈতে যাওক
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Firefox ৰ নতুন বৈশিষ্টসমূহে আপোনাক কেনেধৰণে অধিক দ্ৰুত আৰু উপযোগীভাৱে ব্ৰাউছ কৰাত সহায় কৰে চাওক।
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+<a href="{url}">নতুন টেব বৈশিষ্ট »</a>ৰ বিষয়ে অধিক জানক
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+আমাৰ <a href="{url}">পুনৰৰূপাঙ্কীত ঘৰ পৃষ্ঠা »</a>ৰ বিষয়ে অধিক জানক
 
 
 ;Keep in touch
-Keep in touch
+সংযোগত থাকক
 
 
 ;Keep it moving
-Keep it moving
+ইয়াক চলনশীল ৰাখক
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Firefox প্ৰাপ্ত কৰক » <b>Android ৰ বাবে</b>
 
 
 ;Keep it going
-Keep it going
+ইয়াক চলাই নিয়ক
 
 
 ;Join Mozilla
-Join Mozilla
+Mozilla ত অংশগ্ৰহণ কৰক
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android ৰ'বটক <a href="%s">Google দ্বাৰা অংশীদাৰী</a> আৰু সৃষ্টি কৰা কাৰ্য্যৰ পৰা পুনৰনিৰ্মাণ আৰু <a href="%s">Creative Commons 3.0 Attribution License</a> ত বিৱৰিত চুক্তিসমূহৰ অনুসৰি ব্যৱহাৰ কৰা হৈছিল। 
 
 
