--- a/as/videos/video_fx13.lang
+++ b/as/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Firefox ত নতুন কি] শেহতীয়া Firefox ৰ সৈতে আপুনি যাবলে বিচৰা স্থানত যোৱাটো এতিয়া সহজ আৰু দ্ৰুত।
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+পুনৰৰূপাঙ্কীত ঘৰ পৃষ্ঠাৰ সৈতে আপুনি এতিয়া আপোনাৰ বৈছিকৈ ব্যৱহাৰ কৰা মেনু বিকল্পসমূহলে অভিগম আৰু গমন কৰা এতিয়া অতি সহজ।
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+ডাউনল'ডসমূহ, পত্ৰচিহ্নসমূহ, ইতিহাস, এড-অনসমূহ, সংমিহলি আৰু সংহতিসমূহৰ নিচিনা।
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[নতুন টেব পৃষ্ঠা] আমি আপোনাৰ টেব পৃষ্ঠালে উন্নয়নসমূহ যোগ কৰিছো।
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+নতুন টেব পৃষ্ঠাৰ সৈতে, আপুনি এতিয়া এটা ক্লিকৰ সৈতে আপোনাৰ সৰ্বাধিক শেহতীয়া আৰু বৈছিকৈ ভ্ৰমণ কৰা ছাইটসমূহলে অতি সহজে গমন কৰিব পাৰে।
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+নতুন টেব পৃষ্ঠা ব্যৱহাৰ কৰা আৰম্ভ কৰিবলে, আপোনাৰ ব্ৰাউছাৰৰ উপৰফালে থকা '+' ক্লিক কৰি এটা নতুন টেব সৃষ্টি কৰক।
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+নতুন টেব পৃষ্ঠায় এতিয়া আপোনাৰ সৰ্বাধিক শেহতীয়া আৰু বেছিকৈ ভ্ৰমণ কৰা ৱেবছাইটসমূহৰ থাম্বনেইলসমূহ আপোনাৰ ভীষণ বাৰ ইতিহাসৰ পৰা প্ৰদৰ্শন কৰিব।
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+আপুনি এতিয়া আপোনাৰ নতুন টেব পৃষ্ঠা ক্ৰম সলনি কৰিবলে থাম্বনেইলসমূহ টানি স্বনিৰ্বাচন কৰিব পাৰিব।
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+ছাইটক স্থানত লক কৰিবলে পুষপিন ক্লিক কৰক, 'X' বুটাম এটা ছাইট আতৰাবলে।
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+আপুনি ৰিক্ত নতুন টেব পৃষ্ঠালৈ উভতি যাবলৈ পৃষ্ঠাৰ উপৰ সোঁফালে 'গ্ৰিড' আইকন ক্লিক কৰিব পাৰিব।
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+শেহতীয়া Firefox প্ৰাপ্ত কৰক আৰু এই নতুন বৈশিষ্টসমূহ আজিয়ে ব্যৱহাৰ কৰা আৰম্ভ কৰক!
