l10n:lij video_fx13.lang utf8
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106003 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/videos/video_fx13.lang
+++ b/lij/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[Cöse gh'é de nêuvo into Firefox] Òua anâ dôve t'eu l'é ciù fàçile e velôce con l'ùrtimo Firefox.
+[CÃ¶se gh'Ã© de nÃªuvo into Firefox] Ã’ua anÃ¢ dÃ´ve t'eu l'Ã© ciÃ¹ fÃ Ã§ile e velÃ´ce con l'Ã¹rtimo Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-Co-a Pàgina iniçiâ redizegnâ ti peu acêde e navegâ con ciù façilitæ a-i menû e inpostaçioìn comuneménte ciù adêuviæ.
+Co-a PÃ gina iniÃ§iÃ¢ redizegnÃ¢ ti peu acÃªde e navegÃ¢ con ciÃ¹ faÃ§ilitÃ¦ a-i menÃ» e inpostaÃ§ioÃ¬n comunemÃ©nte ciÃ¹ adÃªuviÃ¦.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Cómme i descaregaménti, segnalìbbri, stöia, conponénti azónti, sync e inpostaçioìn.
+CÃ³mme i descaregamÃ©nti, segnalÃ¬bbri, stÃ¶ia, conponÃ©nti azÃ³nti, sync e inpostaÃ§ioÃ¬n.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[Nêuva Pàgina di Féuggi] Émmo ànche azónto megioraménti a-a teu nêuva Pàgina di Féuggi.
+[NÃªuva PÃ gina di FÃ©uggi] Ã‰mmo Ã nche azÃ³nto megioramÃ©nti a-a teu nÃªuva PÃ gina di FÃ©uggi.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-Co-a Nêuva Pàgina di Féuggi, òua ti peu navegâ con façilitæ inti teu scîti ciù reçénti e ciù vixitæ con 'na sciacâ do ràtto.
+Co-a NÃªuva PÃ gina di FÃ©uggi, Ã²ua ti peu navegÃ¢ con faÃ§ilitÃ¦ inti teu scÃ®ti ciÃ¹ reÃ§Ã©nti e ciÃ¹ vixitÃ¦ con 'na sciacÃ¢ do rÃ tto.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-Pe iniçiâ a-adêuviâ a Nêuva Pàgina di Féuggi, fànnite 'n nêuvo féuggio sciaàndo o '+'  de d'âto into teu navegatô.
+Pe iniÃ§iÃ¢ a-adÃªuviÃ¢ a NÃªuva PÃ gina di FÃ©uggi, fÃ nnite 'n nÃªuvo fÃ©uggio sciaÃ ndo o '+'  de d'Ã¢to into teu navegatÃ´.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-A Nêuva Pàgina di Féuggi a mostriâ òua di dizegnìn co-i scîti ciù reçénti e ciù vixitæ che són pigiæ da-a teu Belìscima Bâra da Stöia.
+A NÃªuva PÃ gina di FÃ©uggi a mostriÃ¢ Ã²ua di dizegnÃ¬n co-i scÃ®ti ciÃ¹ reÃ§Ã©nti e ciÃ¹ vixitÃ¦ che sÃ³n pigiÃ¦ da-a teu BelÃ¬scima BÃ¢ra da StÃ¶ia.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-Ti peu personalizâ a teu Nêuva Pàgina di Féuggi rebelàndo i dizegnìn pe cangiâghe l'órdine.
+Ti peu personalizÃ¢ a teu NÃªuva PÃ gina di FÃ©uggi rebelÃ ndo i dizegnÃ¬n pe cangiÃ¢ghe l'Ã³rdine.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Scìcca sórvia o pontìnn-a pe blocâ 'n scîto inte 'n pòsto, ò o poméllo 'X' pe scancelâlo.
+ScÃ¬cca sÃ³rvia o pontÃ¬nn-a pe blocÃ¢ 'n scÃ®to inte 'n pÃ²sto, Ã² o pomÃ©llo 'X' pe scancelÃ¢lo.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-Ti peu ascì sciacâ l'icónn-a 'griglia' in çìmma a dèstra da pàgina pe tornâ inderê a Nêuva Pàgina di Féuggi giànca.
+Ti peu ascÃ¬ sciacÃ¢ l'icÃ³nn-a 'griglia' in Ã§Ã¬mma a dÃ¨stra da pÃ gina pe tornÃ¢ inderÃª a NÃªuva PÃ gina di FÃ©uggi giÃ nca.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Pìggite lìùrtimo Firefox òua e inìçia a-adêuviâ e nêuve caraterìstiche ancheu!
+PÃ¬ggite lÃ¬Ã¹rtimo Firefox Ã²ua e inÃ¬Ã§ia a-adÃªuviÃ¢ e nÃªuve caraterÃ¬stiche ancheu!
