--- a/lij/videos/video_fx13.lang
+++ b/lij/videos/video_fx13.lang
@@ -19,7 +19,7 @@ Co-a Nêuva Pàgina di Féuggi, òua ti peu navegâ con façilitæ inti teu scî
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-Pe iniçiâ a-adêuviâ a Nêuva Pàgina di Féuggi, fànnite 'n nêuvo féuggio sciaàndo o '+'  de d'âto into teu navegatô.
+Pe iniçiâ a-adêuviâ a Nêuva Pàgina di Féuggi, fànnite 'n nêuvo féuggio sciàcando o '+'  de d'âto into teu navegatô.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
