--- a/cs/snippets.lang
+++ b/cs/snippets.lang
@@ -126,6 +126,6 @@ Rychlý, rychlý, rychlý. <a %s>Firefox pro Android byl právě výrazně vylep
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox obsahuje nové vlastnosti, které vám umožní dokončit váš příští úkol rychleji! <a href="%">Pro více informací shlédněte video</a>.
 
 
