Bug 760481 - [cs] Translate Whats New page for Firefox 13 + vido * czech translation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106016 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/cs/whatsnew.lang
+++ b/cs/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hurá! Váš Firefox je aktuální.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Váš Firefox je neaktuální.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Z bezpečnostních důvodu doporučujeme aktualizovat na <a href="{url}">poslední a nejlepší verzi</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Máte spuštěnu neznámou verzi Firefoxu.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Z bezpečnostních důvodu doporučujeme stáhnout <a href="{url}">poslední a nejlepší verzi</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Realizujte váš příští úkol<br/>rychleji než kdy dříve
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Podívejte se, jak vám nové funkce Firefoxu pomohou prohlížet rychleji a více efektivně.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Dozvědět se více o <a href="{url}">upraveném vzhledu nového panelu »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Dozvědět se více o <a href="{url}">upraveném vzhledu domovské stránky »</a>
 
 
 ;Keep in touch
-Keep in touch
+Buďte informováni
 
 
 ;Keep it moving
-Keep it moving
+Vezměte si jej na cesty
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Získat Firefox » <b>pro Android</b>
 
 
 ;Keep it going
-Keep it going
+Sledujte nás
 
 
 ;Join Mozilla
-Join Mozilla
+Připojit se k Mozille
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Robot Androida byl překreslen z díla vytvořené a <a href="%s">nasdílené společností Google</a> a to dle pravidel uvedených v <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
 
