Changed wording in Firefox 13 whatsnew page for Romansh (rm)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106017 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/rm/whatsnew.lang
+++ b/rm/whatsnew.lang
@@ -26,7 +26,7 @@ Da midar al proxim pensum<br/>va ussa anc pli spert
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-Vesair che las novas funcziuns da Firefox ta gidan a navigar pli spert e pli effectiv.
+Guarda co las novas funcziuns da Firefox ta gidan a navigar pli spert e pli effectiv.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
