Bug 760478 - [br] Translate Whats New page for Firefox 13 + vido (edit) : Small corrections
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106020 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/br/whatsnew.lang
+++ b/br/whatsnew.lang
@@ -22,7 +22,7 @@ Evit abegoù a denn d'an diogelroez ez erbedomp deoc'h pellgargañ an <a href="{
 
 
 ;Get to your next task<br/>faster than ever
-Tremenit d'un eil trevell d'an egile herrekoc'h eget biskoazh
+Tremenit d'un eil trevell d'egile herrekoc'h eget biskoazh
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
