--- a/br/snippets.lang
+++ b/br/snippets.lang
@@ -126,5 +126,5 @@ Herrek, herrek, herrek. <a %s>Un hizivadur pouezus zo bet evit handelv Android e
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox en deus keweriusterioù nevez evit tremen d'un eil trevell d'an egile herrekoc'h c'hoazh ! <a href="%">Sellit ouzh ar video evit gouzout hiroc'h.</a>
+Firefox en deus keweriusterioù nevez evit tremen d'un eil trevell d'egile herrekoc'h c'hoazh ! <a href="%">Sellit ouzh ar video evit gouzout hiroc'h.</a>
 
