Bug 760517 - [ko] Translate Whats New page for Firefox 13 + vido
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106026 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ko/whatsnew.lang
+++ b/ko/whatsnew.lang
@@ -2,62 +2,60 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+여러분의 Firefox는 최신 버전입니다!
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Firefox 예전 버전을 사용중입니다.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+보안상 이유로 Firefox <a href="{url}">최신 버전</a>로 업데이트하시기를 권장합니다.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+알 수 없는 Firefox 버전을 사용 중입니다.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+보안상 이유로 Firefox <a href="{url}">최신 버전</a>을 다운로드하시기를 권장합니다.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+웹 작업 속도를<br/>좀 더 빠르게!
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+더 빠르고 효율적인 웹 브라우징을 위한 Firefox 도움말을 참고하세요.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+<a href="{url}">새 탭 기능</a>에 대해 알아보기 »
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+<a href="{url}">새 홈페이지</a>에 대해 알아보기 »
 
 
 ;Keep in touch
-Keep in touch
+연락하기
 
 
 ;Keep it moving
-Keep it moving
+움직이기
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Firefox 다운르도 » <b>안드로이드용</b>
 
 
 ;Keep it going
-Keep it going
+앞서가기
 
 
 ;Join Mozilla
-Join Mozilla
+Mozilla 참여하기
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-
-
+Android Robot은 <a href="%s">Creative Commons 3.0 Attribution License</a>하에서 사용된 <a href="%s">Google 공유항목</a> 및 파생 작업에서 만들어졌습니다.
