--- a/ko/videos/video_fx13.lang
+++ b/ko/videos/video_fx13.lang
@@ -1,42 +1,35 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-
+[Firefox의 새 기능] 최신 Firefox는 더 빠르고 간단하게 열고 싶은 페이지로 이동할 수 있게 되었습니다. 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-
+새롭게 만든 홈페이지에서 많이 이용하는 메뉴 옵션을 간단하게 접근할 수 있습니다. 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+다운로드, 북마크, 방문기록, 부가 기능, 동기화 및 옵션 등
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[새로운 탭 페이지] 또 하나의 새 기능 새로운 탭 페이지가 개선되었습니다. 
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-
+새로운 탭 페이지에서는 클릭 한번으로 간단하게 자주 방문하는 웹 사이트 목록을 제공합니다.
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-
+새로운 탭 페이지는 탭 바 오른족의 '+' 버튼을 클릭해 엽니다.
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+새로운 탭 페이지에는 웹 사이트의 방문 기록으로부터 최근에 자주 방문한 페이지의 엄지손가락이 표시됩니다. 
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
-
+새로운 탭 페이지를 여러분 마음대로 바꿀 수도 있습니다. 엄지손가락을 드래그 해 바꾸어 보세요. 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-
+왼쪽 위쪽의 핀을 클릭하면 사이트를 고정하고 오른쪽 위의 X 버튼을 클릭하면 사이트를 제거합니다. 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-
+또, 오른족 상단의 그리드 아이콘을 클릭하면 이전과 같이 공백의 탭 페이지로 돌아옵니다. 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+최신 Firefox를 다운로드해 새로운 기능을 사용해 보세요!
