l10n: mr, whatsnew video
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106030 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/mr/videos/video_fx13.lang
+++ b/mr/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[फायरफॉक्समध्ये नवीन काय आहे] सर्वात नवीन फायरफॉक्सचे वापर आता सोपे व वेगवान झाले आहे.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+नवीन स्वरूपाच्या मुख्य पृष्ठासह नेहमी वापरले जाणाऱ्या मेन्यु पर्यायकरीता आता प्रवेश व संचारन सोपे झाले आहे.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+जसे कि डाउनलोडस्, वाचखुणा, इतिहास, ॲडऑन्स्, सिंक व सेटिंग्स्.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[नवीन टॅब पृष्ठ] नवीन टॅब पृष्ठात सुधारणा देखील समाविष्टीत आहे.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+नवीन टॅब पृष्ठासह, सर्वात नवीन व वारंवार भेट दिलेल्या स्थळांकरीता एकाच क्लिकमध्ये संचारन अकदी सोपे झाले आहे.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+नवीन टॅब पृष्ठाचा वापर सुरू करण्यासाठी,  ब्राउजरच्या शीर्षकातील '+' चिन्हावर क्लिक करून नवीन टॅब निर्माण करा.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+नवीन टॅब पृष्ठ आता, ऑसम बार इतिहासपासून सर्वात नवीन व वारंवार भेट देणाऱ्या स्थळांचे थंबनेल्स् दाखवेल.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+क्रमवारी बदलण्याकरीता थंबनेल्स् ओढून नवीन टॅब पृष्ठला पसंतीचे करणे शक्य आहे.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+स्थळाला ठराविक ठिकाणी कुलूपबंद करण्यासाठी पुशपिनवर, किंवा स्थळाला काढून टाकण्यासाठी 'X' बटनावर क्लिक करा.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+रिकाम्या नवीन टॅब पृष्ठावर पुनः जाण्यासाठी पृष्ठाच्या शीर्षातील उजव्या बाजूच्या 'ग्रिड' चिन्हावर क्लिक करणे देखील शक्य आहे.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+सर्वात नवीन फायरफॉक्स प्राप्त करा व ह्या नवीन गुणविशेषांचा वापर आजच करा!
